# AtlasNet

./: .gitignore  .gitmodules  AE_AtlasNet.txt  README.md  TODO  install_deps.sh  requirements.txt  run.sh  setup.py  stats.txt  train.py
aux/: dataset.py  model.py  spec-file.txt  utils.py
auxiliary/: argument_parser.py  colormap.npy  dataset.py  html_report.py  init_html_report.py  mesh_processor.py  meter.py  model.py  my_utils.py  phong.frag  ply.py  pointcloud_processor.py  resnet.py  save_template.py  utils.py  visualCluster.py  visualization.py
auxiliary/ChamferDistancePytorch/: README.md  chamfer_python.py  fscore.py  unit_test.py
auxiliary/ChamferDistancePytorch/chamfer2D/: dist_chamfer_2D.py  setup.py
auxiliary/ChamferDistancePytorch/chamfer3D/: dist_chamfer_3D.py  setup.py
auxiliary/ChamferDistancePytorch/chamfer5D/: dist_chamfer_5D.py  setup.py
auxiliary/metro_sources/: CMakeLists.txt
auxiliary/sampling_and_meshing/O-CNN/: .gitignore  README.md  pcSamplingInfRayShapeNet.py  process_raw_obj.py  randomizePointCloud.py  sample30kpoints.py
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/: CMakeLists.txt  README.md  VirtualScanner.sln  setup.py
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/cpp/libvirtualscanner/: CMakeLists.txt  libvirtualscanner.vcxproj  libvirtualscanner.vcxproj.filters
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/cpp/libvirtualscanner/cmake/: FindCGAL.cmake  FindEigen3.cmake  VirtualScannerConfig.cmake.in
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/cpp/libvirtualscanner/include/virtual_scanner/: virtual_scanner.h
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/cpp/libvirtualscanner/src/: points.cpp  virtual_scanner.cpp
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/cpp/virtualscanner/: CMakeLists.txt  virtualscanner.vcxproj
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/cpp/virtualscanner/src/: main.cpp
auxiliary/sampling_and_meshing/O-CNN/virtual_scanner/python/ocnn/virtualscanner/: CMakeLists.txt  __init__.py  _virtualscanner.pyx  _virtualscanner_extern.pxd  directory_tree_scanner.py  scanner_settings.py
auxiliary/sampling_and_meshing/PoissonRecon/: AdaptiveTreeVisualization.vcxproj
auxiliary/sampling_and_meshing/PoissonRecon/Src/: SSDRecon.cpp
auxiliary/sampling_and_meshing/Shuffle/: parallel_shuffle.py
data/: download_data.sh  synsetoffset2category.txt
dataset/: augmenter.py  dataset_shapenet.py  dataset_shapenet_atlasnet.py  download_metro_files.sh  download_shapenet_pointclouds.sh  download_shapenet_renderings.sh  mesh_processor.py  pointcloud_processor.py  trainer_dataset.py
doc/: aknowledgements.md  contributions.md  data.md  demo.md  meshlab.md  training.md
doc/compare_octree/: files-test.txt
extension/: READMED.md  dist_chamfer.py  setup.py
inference/: demo.py  files-metro.txt  points_sphere.mat  run_AE_AtlasNet.py  run_AE_AtlasNet_sphere.py  run_AE_Baseline.py  run_SVR_AtlasNet.py  run_SVR_AtlasNet_sphere.py  run_SVR_Baseline.py  triangle_sphere.mat
model/: atlasnet.py  diff_props.py  model.py  model_blocks.py  resnet.py  template.py  trainer_model.py
nndistance/: README.md  build.py  test.py
nndistance/_ext/my_lib/: __init__.py
nndistance/functions/: nnd.py
nndistance/modules/: nnd.py
nndistance/src/: my_lib.c  my_lib.h  my_lib_cuda.c  my_lib_cuda.h  nnd_cuda.cu  nnd_cuda.h
sampling_and_meshing/: README.md
sampling_and_meshing/Shuffle/: parallel_shuffle.py  shuffle.py
trained_models/: README.md  download_models.sh
training/: abstract_trainer.py  download_trained_models.sh  iteration.py  launcher.py  loss.py  metro.py  train.py  train_AE_AtlasNet.py  train_AE_AtlasNet_sphere.py  train_AE_Baseline.py  train_SVR_AtlasNet.py  train_SVR_AtlasNet_sphere.py  train_SVR_Baseline.py  trainer.py  trainer_abstract.py  trainer_iteration.py  trainer_loss.py
